# espyresso

./: .gitignore  Makefile  README.md  boiler.py  buttons.py  config.py  display.py  espyresso.service  flow.py  main.py  pid.py  pump.py  pwm.py  pyproject.toml  ranger.py  requirements.dev.txt  start.sh  temperature_thread.py  timer.py  tsic.py  utils.py  xinitrc
espyresso/: __main__.py  app.py  bluetooth.py  boiler.py  buttons.py  config.py  display.py  flow.py  main.py  pcontroller.py  pid.py  pump.py  pwm.py  pygamecode.py  ranger.py  shot_logger.py  simulator_mock.py  temperature.py  temperature_thread.py  test2.py  test_flow.py  test_utils.py  timer.py  tsic.py  utils.py
espyresso/tests/: conftest.py  test_boiler.py  test_buttons.py  test_display.py  test_flow.py  test_pcontroller.py  test_pid.py  test_pwm.py  test_timer.py  test_utils.py
services/: espyresso.service  pigpiod.service
tools/: review_shot.py
